# Brain

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE-v2.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY-GAP.md  PAPER-VERIFICATION.md  README.md  ROADMAP.md  SAKANA-ANALYSIS.md  agentest.config.ts  install.js  install.test.js  oh-my-openagent.jsonc  package-lock.json  package.json  start-mc-bot.ts  test-mcp.js
.agentest/: results.json
.omo/: boulder.json  brain-e2e-report.json  check_bt.js  edit_brain.js  edit_brain2.js  find_bt.js  find_password.mjs  find_session.mjs  fix_l1.js  fix_tests.js  list_tables.mjs  maslow-wave-three-layer.md  rebuild_mcps.mjs  restore_shared.js  run-test.mjs  security-audit.js  temp_edit.ps1  test_server.mjs  test_sqlite.mjs  wave_cdefg.js
.opencode/: oh-my-openagent.jsonc
adapter/: openai-server.mjs  start.mjs
brain-engine-rs/: ARCHITECTURE.md  Cargo.toml  RESEARCH.md  check2.txt  check3.txt  check4.txt  check_err.txt  test_out.txt
brain-engine-rs/.omo/drafts/: brain-engine-fix.md
brain-engine-rs/.omo/plans/: brain-engine-fix.md  brain-v4-roadmap.md  brain-v5-paper-accurate.md  brain-v6-closed-loop.md
brain-engine-rs/src/: attention.rs  basal.rs  belief.rs  brain.rs  bus.rs  cerebellum.rs  dmn.rs  emotion.rs  goal.rs  habit.rs  hormone.rs  interoception.rs  lib.rs  llm.rs  memory.rs  modulator.rs  predictive.rs  reflex.rs  reward.rs  test_helpers.rs  thalamus.rs  types.rs  utils.rs  wave.rs
brain-engine-rs/visualizer/: check.mjs  copy-frames.mjs  copy-screenshot.mjs  go.mjs  make-gif.cjs  playground.html  server-v2.mjs
(+559 files in other folders)
