[package]
name = "brain-engine-rs"
version = "0.3.0"
edition = "2024"
description = "Brain-inspired cognitive architecture in Rust — arXiv 2504.01990 aligned"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
chrono = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
rig-core = "0.40"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing-subscriber = "0.3"

[[bin]]
name = "server"
path = "src/bin/server.rs"
